# stackydo-cli

./: .gitignore  .homebrew-tap.json  .mcp.json  .stackydo-context  CLAUDE.md  Cargo.toml  LICENSE  README.md  STRESS_TEST_REPORT.md  build-local.sh  dist-workspace.toml  stackydo.json
.claude/: settings.json
.claude-plugin/: plugin.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  patch-homebrew.yml  promote-tap.yml
.stackydo/: manifest.json
agents/: task-manager.md
commands/: stackydo-code-review.md  stackydo-create.md  stackydo-iterative-implement.md  stackydo-pa.md  stackydo-plan.md  stackydo-standup.md  stackydo-triage.md
mcp/: stackydo-mcp.json
prompts/: mcp-test-suite.md
schemas/: stackydo.schema.json
skills/task-capture/: SKILL.md
skills/work-tracker/: SKILL.md
src/: error.rs  lib.rs  main.rs  mcp_bin.rs
src/cli/: args.rs
src/commands/: body_edit.rs  comment.rs  complete.rs  context.rs  create.rs  delete.rs  import.rs  init.rs  list.rs  list_workspaces.rs  mcp_setup.rs  migrate.rs  mod.rs  search.rs  show.rs  stacks.rs  stats.rs  update.rs  util.rs
src/context/: dir_context.rs  git_context.rs  mod.rs  todo_context.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs
src/model/: config.rs  context.rs  manifest.rs  mod.rs  task.rs
src/storage/: manifest_store.rs  mod.rs  paths.rs  task_store.rs  workspace.rs
src/tui/: app.rs  handler.rs  mod.rs  ui.rs
src/tui/widgets/: detail_pane.rs  mod.rs  task_list.rs
tests/: smoke_test.sh  test_all.sh
tests/scenarios/: run.sh  scale_test.sh  senior_engineer_month.md
