[package]
name = "stackstodo"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Context-aware CLI task manager with TUI — stacks to do!"

[[bin]]
name = "stackstodo"
path = "src/main.rs"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# DateTime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# ID generation
ulid = "1.1"

# Git
git2 = "0.18"

# Filesystem & patterns
walkdir = "2.4"
regex = "1.10"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
