[package]
name = "stackydo"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Context-aware CLI task manager with TUI — stacky do!"
license = "MIT"
repository = "https://github.com/kythin/stackydo-cli"
homepage = "https://github.com/kythin/stackydo-cli"
readme = "README.md"

[[bin]]
name = "stackydo"
path = "src/main.rs"

[[bin]]
name = "stackydo-mcp"
path = "src/mcp_bin.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# DateTime
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"

# ID generation
ulid = "1.1"

# Git
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }

# Filesystem & patterns
walkdir = "2.4"
regex = "1.10"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# MCP server
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = { version = "1.0", features = ["chrono04"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
